--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 </code></pre>
         </section>
         <section>
-          <h3>Warning !</h3>
+          <h3>Attention !</h3>
           <p>
             <a target="_blank" href="http://www.webbrowsercompatibility.com/es6/desktop/"
               >Tout n'est pas encore supporté par les navigateurs</a
@@ -1553,7 +1553,7 @@
           <h3>Optimisations</h3>
         </section>
         <section>
-          <h3>Ne pas faire trop de ré-affichage innutils</h3>
+          <h3>Ne pas faire trop de ré-affichages innutiles</h3>
           <img data-src="images/should-component-update.png" alt="update" />
         </section>
         <section>
@@ -1624,7 +1624,7 @@
         </section>
         <section data-background="#b5533c">
           <h3>TP-09</h3>
-          <h4>Optimisation</h4>
+          <h4>Optimisations</h4>
           <p>Essayer les différentes façons de faire de la memoization avec memo, useMemo and useCallback</p>
         </section>
         <section>
