update url to https://formation-reactjs.fr

--- a/TPs/demos/futur/index.html
+++ b/TPs/demos/futur/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Formation React js, avec ES6"/>
     <meta name="keywords"
           content="formation react, formation reactjs, freelance, flux, redux, es6, props, state, jsx"/>
-    <link rel="canonical" href="http://codox.fr/formation-reactjs-es6"/>
+    <link rel="canonical" href="https://formation-reactjs.fr"/>
     <title>Formation react js ES6</title>
     <link href="https://google.com/+JeanBaptisteCazaux" rel="publisher"/>
 
@@ -54,7 +54,7 @@
             <h1><img width="75" height="75" data-src="../../../images/react.svg" alt="react"
                      style="border: none; background: none; box-shadow: none; margin: 0;">Future of React</h1>
             <p style="text-align: center"><a target="_blank" href="http://twitter.com/jbcazaux">@jbcazaux</a></p>
-            <p style="text-align: center"><a href="http://codox.fr/formation-reactjs-es6">http://codox.fr/formation-reactjs-es6</a>
+            <p style="text-align: center"><a href="https://formation-reactjs.fr">https://formation-reactjs.fr</a>
             </p>
         </section>
         <section>
@@ -158,7 +158,7 @@
         <section>
             <h3>Let's do it !</h3>
             <h3>help ? <a href="mailto:jbcazaux@gmail.com">jbcazaux@gmail.com</a></h3>
-            <h3><a href="http://codox.fr/formation-reactjs-es6">http://codox.fr/formation-reactjs-es6</a></h3>
+            <h3><a href="https://formation-reactjs.fr">https://formation-reactjs.fr</a></h3>
         </section>
     </div>
 </div>
