--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="keywords"
       content="formation react, formation reactjs, freelance, flux, redux, es6, props, state, jsx"
     />
-    <link rel="canonical" href="http://codox.fr/formation-reactjs-es6" />
+    <link rel="canonical" href="https://formation-reactjs.fr" />
     <title>Formation react js ES6</title>
     <link href="https://google.com/+JeanBaptisteCazaux" rel="publisher" />
 
@@ -68,7 +68,7 @@
           <h3>#ES6</h3>
           <p style="text-align: center"><a target="_blank" href="http://twitter.com/jbcazaux">@jbcazaux</a></p>
           <p style="text-align: center">
-            <a href="http://codox.fr/formation-reactjs-es6">http://codox.fr/formation-reactjs-es6</a>
+            <a href="https://formation-reactjs.fr">https://formation-reactjs.fr</a>
           </p>
         </section>
         <section><img data-src="images/mynameis.jpg" alt="my name is" /></section>
@@ -1631,7 +1631,7 @@
           <h3>Let's do it !</h3>
 
           <h3>help ? <a href="mailto:jbcazaux@gmail.com">jbcazaux@gmail.com</a></h3>
-          <h3><a href="http://codox.fr/formation-reactjs-es6">http://codox.fr/formation-reactjs-es6</a></h3>
+          <h3><a href="https://formation-reactjs.fr">https://formation-reactjs.fr</a></h3>
         </section>
       </div>
     </div>
