--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             }
 
             function getUserName(user) {
-                return `${user.firstname} ${user.lastname}`)
+                return `${user.firstname} ${user.lastname}`
             }
             console.log(getUserName(user))
             </code></pre>
