--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <section><img data-src="images/mynameis.jpg" alt="my name is" /></section>
         <section><img data-src="images/coffee.gif" alt="coffee break" /></section>
         <section>
-          <h3>Goals</h3>
+          <h3>Objectifs</h3>
           <img data-src="images/postits.jpg" alt="goals" />
         </section>
         <section>
