--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
           <p style="text-align: center">
             <a href="https://formation-reactjs.fr">https://formation-reactjs.fr</a>
           </p>
+          <a href="https://www.netlify.com" >
+            <img src="https://www.netlify.com/img/global/badges/netlify-color-bg.svg" alt="Deploys by Netlify"
+                 style="border: none; background: none; box-shadow: none; margin: 0; float: right"/>
+          </a>
         </section>
         <section><img data-src="images/mynameis.jpg" alt="my name is" /></section>
         <section><img data-src="images/coffee.gif" alt="coffee break" /></section>
