typo template string

--- a/index.html
+++ b/index.html
@@ -249,12 +249,12 @@
             </code></pre>
           <pre class="fragment"><code data-trim>
             function getUserName({firstname, lastname}) {
-                return `${firstname} ${lastname}`)
+                return `${firstname} ${lastname}`
             }
             </code></pre>
           <pre class="fragment"><code data-trim>
             const getUserName = ({firstname, lastname}) =>
-                `${user.firstname} ${user.lastname}`
+                `${firstname} ${lastname}`
             </code></pre>
         </section>
         <section>
