--- a/index.html
+++ b/index.html
@@ -548,6 +548,7 @@
           <div style="font-size: 30px; text-align: left; margin-left: 50px;">
             <ul>
               <li>Données modifiées par l'utilisateur (clics, saisies, ...)</li>
+              <li>Données récupérées d'un web service</li>
               <li>Faire un maximum de composants sans état</li>
               <li><strike>Données dérivées des props </strike>(Faire ca dans le composant directement)</li>
               <li><strike>Composants</strike></li>
