--- a/index.html
+++ b/index.html
@@ -1238,7 +1238,7 @@
             Créer un <i>Context</i>, and et encapsuler l'application à l'interieur du <i>&lt;Context.Provider&gt;</i>
           </p>
           <pre><code data-trim>
-                const Context = React.createContext({color: 'green', user: null})
+                const Context = React.createContext()
                 export default Context
             </code></pre>
           <pre><code data-trim>
