--- a/index.html
+++ b/index.html
@@ -1381,7 +1381,7 @@
           <pre><code data-trim>
           import {render, fireEvent, screen } from '@testing-library/react'
 
-          it('fire events', () => {
+          it('fires events', () => {
             render(&lt;NiceInput /&gt;)
             const input = screen.getByRole('input')
 
