--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </section>
         <section>
           <h3>Versions</h3>
-          <pre><code data-trim>"react": "17.0.0-rc.1"</code></pre>
+          <pre><code data-trim>"react": "17.0.1"</code></pre>
         </section>
         <section>
           <h3>Le programme !</h3>
