--- a/index.html
+++ b/index.html
@@ -1235,7 +1235,7 @@
         <section>
           <h3>Context API</h3>
           <p>
-            Créer un <i>Context</i>, and et encapsuler l'application à l'interieur du <i>&lt;Context.Provider&gt;</i>
+            Créer un <i>Context</i>, et encapsuler l'application à l'interieur du <i>&lt;Context.Provider&gt;</i>
           </p>
           <pre><code data-trim>
                 const Context = React.createContext()
