--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
               height="75"
               data-src="images/react.svg"
               alt="react"
-              style="border: none; background: none; box-shadow: none; margin: 0;"
+              style="border: none; background: none; box-shadow: none; margin: 0"
             />React
           </h1>
           <h3>#ES6</h3>
-          <p style="text-align: center;"><a target="_blank" href="http://twitter.com/jbcazaux">@jbcazaux</a></p>
-          <p style="text-align: center;">
+          <p style="text-align: center"><a target="_blank" href="http://twitter.com/jbcazaux">@jbcazaux</a></p>
+          <p style="text-align: center">
             <a href="https://formation-reactjs.fr">https://formation-reactjs.fr</a>
           </p>
           <a href="https://www.netlify.com">
             <img
               src="https://www.netlify.com/img/global/badges/netlify-color-bg.svg"
               alt="Deploys by Netlify"
-              style="border: none; background: none; box-shadow: none; margin: 0; float: right;"
+              style="border: none; background: none; box-shadow: none; margin: 0; float: right"
             />
           </a>
         </section>
@@ -99,19 +99,19 @@
           <h2>EcmaScript 6/7</h2>
         </section>
         <section>
-          <h3><span style="text-decoration: line-through;">var</span>, let, const</h3>
+          <h3><span style="text-decoration: line-through">var</span>, let, const</h3>
           <pre><code data-trim>
                 let foo = 'bar'
                 const MAX = 10
                 const ttc = addTva(15)
                 </code></pre>
           <p class="fragment">
-            <span style="color: #8cd0d3;">let</span> vs. <span style="color: #cc9393;">const</span> ?
+            <span style="color: #8cd0d3">let</span> vs. <span style="color: #cc9393">const</span> ?
             <span class="fragment">0 var, 44 let, 997 const</span>
           </p>
         </section>
         <section>
-          <h3><span style="text-decoration: line-through;">var</span>, let, const</h3>
+          <h3><span style="text-decoration: line-through">var</span>, let, const</h3>
           <pre><code data-trim>
                 if (true) {
                     var i = 1
@@ -401,7 +401,7 @@
               height="200"
               data-src="images/react.svg"
               alt="react"
-              style="border: none; background: none; box-shadow: none; margin: 0;"
+              style="border: none; background: none; box-shadow: none; margin: 0"
             />
           </h1>
         </section>
@@ -456,7 +456,7 @@
         </section>
         <section>
           <h3>Type checking</h3>
-          <p style="font-size: 32px;">
+          <p style="font-size: 32px">
             On peut <i>ne rien faire</i>, utiliser
             <a target="_blank" href="https://www.typescriptlang.org/">Typescript</a> ,
             <a target="_blank" href="https://flow.org/">Flow</a>,
@@ -472,7 +472,7 @@
                 truc: PropTypes.bool
             }
             </code></pre>
-          <p style="font-size: 22px; text-align: left;">
+          <p style="font-size: 22px; text-align: left">
             types: array, bool, func, number, object, string, shape, node, arrayOf(), ...
             <a href="https://reactjs.org/docs/typechecking-with-proptypes.html">
               https://reactjs.org/docs/typechecking-with-proptypes.html
@@ -538,14 +538,14 @@
           <h3>Props vs State</h3>
 
           <p>Props</p>
-          <div style="font-size: 30px; text-align: left; margin-left: 50px;">
+          <div style="font-size: 30px; text-align: left; margin-left: 50px">
             <ul>
               <li>Données passées par le composant parent</li>
             </ul>
           </div>
 
           <p>State</p>
-          <div style="font-size: 30px; text-align: left; margin-left: 50px;">
+          <div style="font-size: 30px; text-align: left; margin-left: 50px">
             <ul>
               <li>Données modifiées par l'utilisateur (clics, saisies, ...)</li>
               <li>Données récupérées d'un web service</li>
@@ -602,7 +602,7 @@
         <section data-background="#b5533c">
           <h3>TP-02</h3>
           <h4>Shopping list</h4>
-          <ol style="font-size: 34px;">
+          <ol style="font-size: 34px">
             <li>Afficher le titre passé par le parent</li>
             <li>Mettre un état par défaut (liste vide)</li>
             <li>Mettre la liste des items retournée par l'appel au web service</li>
@@ -707,14 +707,14 @@
         <section>
           <h3>Ant Design</h3>
 
-          <div style="font-size: 30px; text-align: left; margin-left: 50px;">
+          <div style="font-size: 30px; text-align: left; margin-left: 50px">
             <p>React Components for desktop applications</p>
           </div>
           <pre><code data-trim>
             &lt;Button type="primary" onClick={handleCdlick}&gt;Go!&lt;/Button&gt;
           </code></pre>
 
-          <div style="font-size: 30px; text-align: left; margin-left: 50px;">
+          <div style="font-size: 30px; text-align: left; margin-left: 50px">
             <p>Documentation</p>
             <p>
               <a target="_blank" href="https://ant.design/docs/spec/introduce">
@@ -726,14 +726,14 @@
         <section>
           <h3>Material-UI</h3>
 
-          <div style="font-size: 30px; text-align: left; margin-left: 50px;">
+          <div style="font-size: 30px; text-align: left; margin-left: 50px">
             <p>React components that implement Google's Material Design</p>
           </div>
           <pre><code data-trim>
                 &lt;Button onClick={handleClick}&gt;Go!&lt;/Button&gt;
           </code></pre>
 
-          <div style="font-size: 30px; text-align: left; margin-left: 50px;">
+          <div style="font-size: 30px; text-align: left; margin-left: 50px">
             <p>Documentation</p>
             <p><a target="_blank" href="https://material-ui.com/api/button/">https://material-ui.com/api/button/</a></p>
           </div>
@@ -741,7 +741,7 @@
         <section>
           <h3>Styled-Components</h3>
 
-          <div style="font-size: 30px; text-align: left; margin-left: 50px;">
+          <div style="font-size: 30px; text-align: left; margin-left: 50px">
             <p>Visual primitives for the component age.</p>
           </div>
           <pre><code data-trim>
@@ -753,7 +753,7 @@
             &lt;Title&gt;Nice title !&lt;/Title&gt;
             </code></pre>
 
-          <div style="font-size: 30px; text-align: left; margin-left: 50px;">
+          <div style="font-size: 30px; text-align: left; margin-left: 50px">
             <p>Documentation</p>
             <p>
               <a target="_blank" href="https://www.styled-components.com/docs/api"
@@ -794,7 +794,7 @@
                     : <div>No User</div>}
             </code></pre>
           <p>
-            <a href="https://angular.io/api/common/NgIf" style="font-size: 0.5em;">Pas mieux en angular :)</a>
+            <a href="https://angular.io/api/common/NgIf" style="font-size: 0.5em">Pas mieux en angular :)</a>
           </p>
         </section>
         <section>
@@ -850,7 +850,7 @@
         </section>
         <section>
           <h3>Flux</h3>
-          <div style="font-size: 30px; text-align: left; margin-left: 15px;">
+          <div style="font-size: 30px; text-align: left; margin-left: 15px">
             <ul>
               <li>Store: Stocker la donnée</li>
               <li>Action: Mettre à jour le model</li>
@@ -866,7 +866,7 @@
           <h3>Bad Practice vs. Good Practice</h3>
 
           <img data-src="images/flux-bestpractice.png" alt="best practices" height="300" />
-          <div style="font-size: 30px; text-align: left; margin-left: 15px;">
+          <div style="font-size: 30px; text-align: left; margin-left: 15px">
             <ul>
               <li>On ne met pas à jour les composants directement</li>
               <li>On peut utiliser le store (redux), les stores (flux), les services (RxJs Subjects ), ...</li>
@@ -906,7 +906,7 @@
         <section>
           <h3>Redux</h3>
 
-          <div style="font-size: 30px; text-align: left; margin-left: 15px;">
+          <div style="font-size: 30px; text-align: left; margin-left: 15px">
             <ul>
               <li>Store unique (plus simple pour l'isomorphisme / SSR)</li>
               <li>Le <b>state</b> du store est read-only</li>
@@ -1007,7 +1007,7 @@
         </section>
         <section>
           <h3>Rappels</h3>
-          <div style="font-size: 30px; text-align: left; margin-left: 85px;">
+          <div style="font-size: 30px; text-align: left; margin-left: 85px">
             <ul>
               <li>Actions</li>
               <li>Reducers</li>
@@ -1028,9 +1028,7 @@
         <section>
           <h3>Hooks</h3>
 
-          <p style="font-size: 28px;">
-            useSelector
-          </p>
+          <p style="font-size: 28px">useSelector</p>
           <pre><code data-trim>
             import { useSelector } from 'react-redux'
 
@@ -1039,9 +1037,7 @@
               return &lt;div&gt;{foo.id} / {foo.info} &lt;/div&gt;
             }
             </code></pre>
-          <p style="font-size: 28px;">
-            useDispatch
-          </p>
+          <p style="font-size: 28px">useDispatch</p>
           <pre><code data-trim>
             import { useDispatch } from 'react-redux'
 
@@ -1099,7 +1095,7 @@
         <section data-background="#b5533c">
           <h3>TP-04</h3>
           <h4>Shopping list - bis</h4>
-          <ol style="font-size: 34px;">
+          <ol style="font-size: 34px">
             <li>Installer redux-dev-tools</li>
             <li>
               Comme le TP-02, mais utiliser le <i>state</i> du store plutot que le <i>state</i> du composant, et
@@ -1201,9 +1197,7 @@
           <ol>
             <li>Configurer le "thunk" Middleware dans index.js</li>
             <li>Comme le TP-04 mais avec un appel asynchrone (http) pour charger la liste des items</li>
-            <li>
-              Bonus: Créer une action qui applique un taux de TVA, lorsque l'on ajoute un nouvel élément
-            </li>
+            <li>Bonus: Créer une action qui applique un taux de TVA, lorsque l'on ajoute un nouvel élément</li>
           </ol>
         </section>
         <section>
@@ -1234,9 +1228,7 @@
         </section>
         <section>
           <h3>Context API</h3>
-          <p>
-            Créer un <i>Context</i>, et encapsuler l'application à l'interieur du <i>&lt;Context.Provider&gt;</i>
-          </p>
+          <p>Créer un <i>Context</i>, et encapsuler l'application à l'interieur du <i>&lt;Context.Provider&gt;</i></p>
           <pre><code data-trim>
                 const Context = React.createContext()
                 export default Context
@@ -1438,7 +1430,7 @@
           <h4>Tests</h4>
           <p>L'objectif est d'écrire les tests du TP-03</p>
           <p></p>
-          <ol style="font-size: 32px;">
+          <ol style="font-size: 32px">
             <li>Créer un fichier .test.js pour chaque composant</li>
             <li><i>StudentDetails</i>: Vérifier les textes (avec Student.NULL ou un Student)</li>
             <li><i>Filter</i>: Verifier que le callback est appelé quand l'évènement <i>change</i> est propagé</li>
@@ -1464,7 +1456,7 @@
             <li><b>HashRouter</b>: /monsite/#/page1/partie2</li>
             <li><b>MemoryRouter</b> : /</li>
           </ul>
-          <p style="font-size: 24px;">
+          <p style="font-size: 24px">
             Pour le BrowserRouter il faut rediriger toutes les requêtes vers index.html, sauf les .css, .js, et les
             appels aux webservices.
           </p>
@@ -1567,7 +1559,7 @@
           <h3>Reconciliation</h3>
           <p>
             Le <b>Virtual DOM</b> est...
-            <span class="fragment" style="font-size: 24px;">
+            <span class="fragment" style="font-size: 24px">
               Une représentation mémoire des composants. Quand le rendu d'un composant est fait à nouveau, le nouveau
               V-DOM est comparé à l'ancien V-DOM. Si il y a une différence, le DOM du browser est (partiellement) mis à
               jour.
@@ -1583,64 +1575,73 @@
           </ul>
         </section>
         <section data-auto-animate data-visibility="hidden">
-          <h3 data-id="usecallback">useCallback()</h3>
-          <pre data-id="usecallback-code"><code data-trim>
-            const MyInput = () => {
-                const [value, setValue] = useState('')
-                return &lt;input value={value}
-                    onChange={e => setValue(e.target.value)} /&gt;
-            }
-            </code></pre>
-        </section>
-        <section data-auto-animate data-visibility="hidden">
-          <h3 data-id="usecallback">useCallback()</h3>
-          <pre data-id="usecallback-code"><code data-trim>
-            const MyInput = () => {
-                const [value, setValue] = useState('')
-                const handleInput = e => setValue(e.target.value)
-
-                return &lt;input value={value} onChange={handleInput} /&gt;
-            }
-            </code></pre>
-        </section>
-        <section data-auto-animate>
-          <h3 data-id="usecallback">useCallback()</h3>
-          <pre data-id="usecallback-code"><code data-trim>
-            const MyInput = () => {
-                const [value, setValue] = useState('')
-                const handleInput = useCallback(e =>
-                    setValue(e.target.value), [])
-
-                return &lt;input value={value} onChange={handleInput} /&gt;
-            }
-            </code></pre>
-        </section>
-        <section data-auto-animate>
           <h3 data-id="usememo">useMemo</h3>
-          <pre data-id="usememo-code"><code data-trim>
-            const User = ({user}) =>  &lt;div&gt;{user.name}&lt;/div&gt;
+          <p data-id="usememo-p">
+            useMemo permet de <em>memoize</em> une fonction, c'est à dire de mettre en mémoire son résultat afin de le
+            retourner lors d'un futur appel avec les mêmes paramètres.
+          </p>
+          <pre data-id="usememo-pre"><code data-trim>
+            const Calculator = ({a, b}) => {
+             const result = veryLongOperation(a, b)
+             return &lt;div&gt; {result} &lt;/div&gt;
+            }
           </code></pre>
         </section>
         <section data-auto-animate>
           <h3 data-id="usememo">useMemo</h3>
-          <pre data-id="usememo-code"><code data-trim>
-            const MemoizedUser = ({user}) => {
-                return  useMemo(() => &lt;User user={user}&gt;, [user.id])
+          <p data-id="usememo-p">
+            useMemo permet de <em>memoize</em> une fonction, c'est à dire de mettre en mémoire son résultat afin de le
+            retourner lors d'un futur appel avec les mêmes paramètres.
+          </p>
+          <pre data-id="usememo-pre"><code data-trim>
+            const Calculator = ({a, b}) => {
+             const result = useMemo(() => veryLongOperation(a, b), [a, b])
+             return &lt;div&gt; {result} &lt;/div&gt;
             }
-           </code></pre></section>
+          </code></pre>
+        </section>
+        <section data-auto-animate data-visibility="hidden">
+          <h3 data-id="memo">Perfs - React.memo</h3>
+          <p data-id="memo-p">React.memo permet de <em>memoize</em> un composant React.</p>
+          <pre data-id="memo-pre"><code data-trim>
+           const MyComponent = () => ...
+           export default React.memo(MyComponent)
+          </code></pre>
+        </section>
         <section data-auto-animate>
-          <h3 data-id="usememo">useMemo</h3>
-          <pre data-id="usememo-code"><code data-trim>
-            // inside a component
-            const memoizedUser = useMemo(() => &lt;User user={user} /&gt;,
-              [user.id])
-            return {memoizedUser}
-          </code></pre></section>
+          <h3 data-id="memo">Perfs - React.memo</h3>
+          <p data-id="memo-p">React.memo permet de <em>memoize</em> un composant React.</p>
+          <pre data-id="memo-pre"><code data-trim>
+           const MyComponent = () => ...
+           export default React.memo(MyComponent, (prevProps, nextProps) => {
+            return prevProps.user?.id === nextProps.user?.id
+           })
+          </code></pre>
+        </section>
         <section data-auto-animate>
-          <h3 data-id="usememo">useMemo</h3>
-          <pre data-id="usememo-code"><code data-trim>
-            const MemoizedUser = React.memo(({ user }) =>
-              &lt;User user={user} /&gt;)
+          <h3 data-id="callback">useCallback</h3>
+          <p data-id="callback-p">
+            useCallback permet de ne pas recréer une nouvelle fonction à chaque exécution (re-render) d'un composant.
+            Ces fonctions sont destinées à être passées comme callback aux composants enfants.
+          </p>
+          <pre data-id="callback-pre"><code data-trim>
+           const MyComponent = () => {
+            return &lt;button onclick={e => console.log(e)}&gt;Click me&lt;/&gt;
+           })
+          </code></pre>
+        </section>
+        <section data-auto-animate>
+          <h3 data-id="callback">useCallback</h3>
+          <p data-id="callback-p">
+            useCallback permet de ne pas recréer une nouvelle fonction à chaque exécution (re-render) d'un composant.
+            Ces fonctions sont destinées à être passées comme callback aux composants enfants.
+          </p>
+          <pre data-id="callback-pre"><code data-trim>
+           const MyComponent = () => {
+            const handleClick = useCallback(e => console.log(e))
+
+            return &lt;button onclick={handleClick}&gt;Click me&lt;/&gt;
+           })
           </code></pre>
         </section>
         <section data-background="#b5533c">
