--- a/index.html
+++ b/index.html
@@ -1642,6 +1642,8 @@
         </section>
         <section>
           <h3>Let's do it !</h3>
+          <h3>help ? <a href="mailto:jbcazaux@gmail.com">jbcazaux@gmail.com</a></h3>
+          <h3><a href="https://formation-reactjs.fr">https://formation-reactjs.fr</a></h3>
         </section>
       </div>
     </div>
